hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__isub@llvm14.snap
---
source: src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1(i64 %0, i64 %1) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %2 = sub i64 %0, %1
  ret i64 %2
}
