hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__isub@pre-mem2reg@llvm20.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i64 @_hl.main.1(i64 %0, i64 %1) {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"2_1" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  store i64 %1, ptr %"2_1", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %"2_12" = load i64, ptr %"2_1", align 4
  %2 = sub i64 %"2_01", %"2_12"
  store i64 %2, ptr %"4_0", align 4
  %"4_03" = load i64, ptr %"4_0", align 4
  store i64 %"4_03", ptr %"0", align 4
  %"04" = load i64, ptr %"0", align 4
  ret i64 %"04"
}
