hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__iwiden_s@llvm14.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i64 @_hl.main.1(i8 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = sext i8 %0 to i64
  ret i64 %1
}
